--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ flutter:
   assets:
     - assets/c2.jpg
     - assets/app_icon.png
+    - assets/house_bg.jpg
+    - assets/list_bg.jpg
+    - assets/loader.gif
+    - assets/morning.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
