--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ flutter:
     - assets/house_bg.jpg
     - assets/list_bg.jpg
     - assets/loader.gif
-    - assets/morning.jpg
+    - assets/snow_bg.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
