--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,12 @@ environment:
 
 dependencies:
   geolocator: '^2.1.1'
+  carousel:
+   git:
+     url: git://github.com/gbrvalerio/carousel.git
   flutter:
     sdk: flutter
+  intl: ^0.15.7
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,6 +50,7 @@ flutter:
     - assets/list_bg.jpg
     - assets/loader.gif
     - assets/snow_bg.jpg
+    - assets/hounted.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
